Made database functional
- excluded nullable option from attributes
- fixed starting date
