# src/WebUI/Shared/Auction/CreateAuctionItemRequest.cs
@@ -1,9 +1,4 @@
 ﻿using FluentValidation;
-using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
 
 namespace Cegeka.Auction.WebUI.Shared.Auction
 {
@@ -12,17 +7,17 @@ namespace Cegeka.Auction.WebUI.Shared.Auction
         public string Title { get; set; } = string.Empty;
         public string Description { get; set; } = string.Empty;
         public List<string> Images { get; set; } = new List<string>();
-        public DateTime StartDate { get; set; } = DateTime.Now;
+        public DateTime StartDate { get; set; }
         public DateTime EndDate { get; set; }
         public string Category { get; set; } = string.Empty;
 
         public decimal StartingBidAmount { get; set; } = 0;
 
-        public decimal? CurrentBidAmount { get; set; }
+        public decimal CurrentBidAmount { get; set; }
 
-        public decimal? BuyItNowPrice { get; set; }
+        public decimal BuyItNowPrice { get; set; }
 
-        public decimal? ReservePrice { get; set; }
+        public decimal ReservePrice { get; set; }
 
         public int DeliveryMethod { get; set; }
 
